增加验证码功能

--- a/citi/system/users/templates/login.html
+++ b/citi/system/users/templates/login.html
@@ -1,5 +1,35 @@
-<form action="?next={{ next }}" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="登陆" />
-</form>
+{% load staticfiles %}
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <script src="{% static 'js/jquery-latest.js' %}"></script>
+    </head>
+    <body>
+        <form action="?next={{ next }}" method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" value="登陆"/>
+        </form>
+        <script type="text/javascript">
+            $(function () {
+                $('img.captcha').after(
+                    $('<a href="#void" class="captcha-refresh">刷新验证码</a>')
+                );
+
+                $('.captcha-refresh').click(function () {
+                    var $form = $(this).parents('form');
+                    var url = location.protocol + "//" + window.location.hostname + ":"
+                        + location.port + "/captcha/refresh/";
+
+                    $.getJSON(url, {}, function (json) {
+                        $form.find('input[name="captcha_0"]').val(json.key);
+                        $form.find('img.captcha').attr('src', json.image_url);
+                    });
+
+                    return false;
+                });
+            });
+        </script>
+    </body>
+</html>
