--- a/citi/system/users/templates/login.html
+++ b/citi/system/users/templates/login.html
@@ -19,8 +19,7 @@
 
                 $('.captcha-refresh').click(function () {
                     var $form = $(this).parents('form');
-                    var url = location.protocol + "//" + window.location.hostname + ":"
-                        + location.port + "/captcha/refresh/";
+                    var url = "{% url 'captcha-refresh' %}";
 
                     $.getJSON(url, {}, function (json) {
                         $form.find('input[name="captcha_0"]').val(json.key);
