增加个人中心

--- a/citi/apps/account/templates/logout.html
+++ b/citi/apps/account/templates/logout.html
@@ -1,1 +1,14 @@
-您已成功登出
+<html>
+    <head>
+        <title>登出页面</title>
+        <meta charset="utf-8">
+    </head>
+    <body>
+        <div>
+            <p>您已成功登出</p>
+        </div>
+        <div>
+            <p><a href="{% url 'login' %}">返回登录</a></p>
+        </div>
+    </body>
+</html>
