--- a/citi/apps/account/templates/password_reset_complete.html
+++ b/citi/apps/account/templates/password_reset_complete.html
@@ -1,1 +1,14 @@
-重置密码完成！<a href="{{ login_url }}">点击此处登陆</a>
+<html>
+    <head>
+        <title>密码重置完成页面</title>
+        <meta charset="utf-8">
+    </head>
+    <body>
+        <div>
+            <p>您的密码已经重置完成</p>
+        </div>
+        <div>
+            <p><a href="{% url 'login' %}">点击此处登录</a></p>
+        </div>
+    </body>
+</html>
