--- a/citi/apps/account/templates/registration_complete.html
+++ b/citi/apps/account/templates/registration_complete.html
@@ -1,1 +1,13 @@
-注册完成，请去邮箱检查
+{% load staticfiles %}
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>注册完成</title>
+        <meta charset="utf-8">
+    </head>
+    <body>
+        <div>
+            <p>注册完成，请去邮箱中检查邮件</p>
+        </div>
+    </body>
+</html>
