--- a/citi/apps/account/templates/registration_form.html
+++ b/citi/apps/account/templates/registration_form.html
@@ -11,6 +11,7 @@
             {{ form.as_p }}
             <input type="submit" value="注册"/>
         </form>
+        <p><a href="{% url 'login' %}">点此登录</a></p>
         <script type="text/javascript">
             $(function () {
                 $('img.captcha').after(
