--- a/citi/templates/base.html
+++ b/citi/templates/base.html
@@ -57,6 +57,7 @@
 
       {% block content %}
         <p>Use this document as a way to quick start any new project.</p>
+        <a href="http://webscan.360.cn/index/checkwebsite/url/citi.oott.me" name="e557ff83b87d676cdd408062679c1f8e" >360网站安全检测平台</a>
       {% endblock content %}
 
     </div> <!-- /container -->
