--- a/citi/apps/crowdfunding/templates/crowdfunding/publish_content.html
+++ b/citi/apps/crowdfunding/templates/crowdfunding/publish_content.html
@@ -1,7 +1,11 @@
+{% load staticfiles %}
+
+<!DOCTYPE html>
 <html>
     <head>
         <title>发起项目</title>
         <meta charset="utf-8">
+        <script src="{% static 'js/jquery-latest.js' %}"></script>
     </head>
     <body>
         <form action="" method="post">
