发布项目第三步完成

--- a/citi/apps/crowdfunding/templates/crowdfunding/publish.html
+++ b/citi/apps/crowdfunding/templates/crowdfunding/publish.html
@@ -7,7 +7,7 @@
         <div>
             {{ agreement }}
             <hr>
-            <a href="">我已阅读并同意发布项目协议协议</a>
+            <a href="{% url 'crowdfunding.publish.content' %}">我已阅读并同意发布项目协议协议</a>
         </div>
     </body>
 </html>
