--- a/citi/apps/crowdfunding/templates/crowdfunding/publish_content.html
+++ b/citi/apps/crowdfunding/templates/crowdfunding/publish_content.html
@@ -5,6 +5,7 @@
     <head>
         <title>发起项目</title>
         <meta charset="utf-8">
+        {{ form.media }}
         <script src="{% static 'js/jquery-latest.js' %}"></script>
     </head>
     <body>
