修正用户字段

--- a/citi/apps/account/templates/registration_form.html
+++ b/citi/apps/account/templates/registration_form.html
@@ -6,7 +6,7 @@
         <script src="{% static 'js/jquery-latest.js' %}"></script>
     </head>
     <body>
-        <form action="" method="post">
+        <form action="" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form.as_p }}
             <input type="submit" value="注册"/>
