--- a/citi/apps/crowdfunding/templates/crowdfunding/publish_content.html
+++ b/citi/apps/crowdfunding/templates/crowdfunding/publish_content.html
@@ -9,7 +9,7 @@
         <script src="{% static 'js/jquery-latest.js' %}"></script>
     </head>
     <body>
-        <form action="" method="post">
+        <form action="" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form.as_p }}
             <hr>
