--- a/citi/apps/account/templates/registration_form.html
+++ b/citi/apps/account/templates/registration_form.html
@@ -12,19 +12,23 @@
         <link rel="stylesheet" href="{% static 'css/sign.css' %}">
         <link rel="stylesheet" href="{% static 'css/cmxform.css' %}">
         <link rel="stylesheet" href="{% static 'css/jquery.cropbox.css' %}">
-        <script data-main="{% static 'js/sign.js' %}" src="{% static 'js/lib/require.js' %}" defer async="async"></script>
+        <script src="{% static 'js/lib/require.js' %}"></script>
+        <script>
+            require(["{% static 'js/common.js' %}"], function (common) {
+                require(["{% static 'js/app/sign.js' %}"]);
+            })
+        </script>
     </head>
     <body>
-        <header class="header center white clear relative active">
+        <header class="header center bg-red white clear relative">
             <div class="header-notify auto">
-                <a href="person.html" class="center white">您有一条新的消息</a>
+                <p>这里是各种弹出通知</p>
             </div>
-            <span class="absolute close" data-dismiss="header">×</span>
+            <span class="absolute modal-close">×</span>
         </header>
         <nav class="nav bg-green-light clear">
             <div class="nav-wrap auto">
-                <div class="logo left"></div>
-
+                <div class="logo left bg-yellow"></div>
                 <div class="search right">
                     <form action="" class="left">
                         <div class="field clear mr-12">
@@ -32,7 +36,7 @@
                             <input class="input-search left block" type="text" placeholder="请输入您要搜索的内容"/>
                         </div>
                     </form>
-                    <div class="user left" data-toggle="#loginModal"></div>
+                    <div class="user left"></div>
                 </div>
                 <ul class="normal nav-link clear center">
                     <li class="left"><a class="active block white" href="#">首页</a></li>
@@ -62,8 +66,8 @@
                                     </h3></li>
                                 </ul>
                             </div>
-                            <form method="post" id="sign" action="?next=/accounts/register"
-                                  enctype="multipart/form-data">
+                            <form method="post" id="sign" action="" enctype="multipart/form-data">
+                                {% csrf_token %}
                                 <div class="js-sign-content">
                                     <div class="active">
                                         <div class="sign-panel-content bg-white">
@@ -73,7 +77,7 @@
 
                                                     <p>
                                                         一、总则<br>
-                                                        1.1 好味道众筹网的所有权和运营权归武汉市好味道科技有限公司所有。 <br>
+                                                        1.1 保宝网的所有权和运营权归深圳市永兴元科技有限公司所有。 <br>
                                                         1.2
                                                         用户在注册之前，应当仔细阅读本协议，并同意遵守本协议后方可成为注册用户。一旦注册成功，则用户与保宝网之间自动形成协议关系，用户应当受本协议的约束。用户在使用特殊的服务或产品时，应当同意接受相关协议后方能使用。<br>
                                                         1.3
@@ -82,7 +86,7 @@
 
                                                     <p>
                                                         二、服务内容<br>
-                                                        2.1 好味道众筹网的具体内容由本站根据实际情况提供。 <br>
+                                                        2.1 保宝网的具体内容由本站根据实际情况提供。 <br>
                                                         2.2
                                                         本站仅提供相关的网络服务，除此之外与相关网络服务有关的设备(如个人电脑、手机、及其他与接入互联网或移动网有关的装置)及所需的费用(如为接入互联网而支付的电话费及上网费、为使用移动网而支付的手机费)均应由用户自行负担。
                                                         <br>
@@ -95,16 +99,16 @@
 
                                                     <p>
                                                         一、总则<br>
-                                                        1.1 好味道众筹网的所有权和运营权归武汉市好味道科技有限公司所有。 <br>
+                                                        1.1 保宝网的所有权和运营权归深圳市永兴元科技有限公司所有。 <br>
                                                         1.2
                                                         用户在注册之前，应当仔细阅读本协议，并同意遵守本协议后方可成为注册用户。一旦注册成功，则用户与保宝网之间自动形成协议关系，用户应当受本协议的约束。用户在使用特殊的服务或产品时，应当同意接受相关协议后方能使用。<br>
                                                         1.3
-                                                        本协议则可由好味道众筹网随时更新，用户应当及时关注并同意本站不承担通知义务。本站的通知、公告、声明或其它类似内容是本协议的一部分
+                                                        本协议则可由保宝网随时更新，用户应当及时关注并同意本站不承担通知义务。本站的通知、公告、声明或其它类似内容是本协议的一部分
                                                     </p>
 
                                                     <p>
                                                         二、服务内容<br>
-                                                        2.1 好味道众筹网的具体内容由本站根据实际情况提供。 <br>
+                                                        2.1 保宝网的具体内容由本站根据实际情况提供。 <br>
                                                         2.2
                                                         本站仅提供相关的网络服务，除此之外与相关网络服务有关的设备(如个人电脑、手机、及其他与接入互联网或移动网有关的装置)及所需的费用(如为接入互联网而支付的电话费及上网费、为使用移动网而支付的手机费)均应由用户自行负担。
                                                         <br>
@@ -152,8 +156,8 @@
                                                 <select name="native" id="city" class="select left"></select>
                                             </div>
                                             <div class="basic-info-list mb-20 clear">
-                                                <label class="mr-12 green left" for="occupation">职&nbsp;业:</label><input
-                                                    type="text" id="occupation" name="occupation" class="input">
+                                                <label class="mr-12 green left" for="profession">职&nbsp;业:</label><input
+                                                    type="text" id="profession" name="profession" class="input">
                                             </div>
                                         </div>
                                     </div>
@@ -167,6 +171,7 @@
                                                 <label class="mr-12 green left" for="sex">性&nbsp;别:</label>
                                                 <select name="sex" id="sex" class="select left valid"
                                                         aria-invalid="false">
+                                                    <option value=""></option>
                                                     <option value="m">男</option>
                                                     <option value="l">女</option>
                                                     <option value="u">保密</option>
@@ -192,7 +197,8 @@
 
                                                 <div class="preview left"></div>
                                                 <input type="file" id="image" name="image">
-                                                <button class="btn bg-green-light white" id="upload">上传</button>
+                                                <button class="btn bg-green-light white" type="button" id="upload">上传
+                                                </button>
                                                 <input type="text" id="imageId" name="idcard_image" class="hide">
                                             </div>
                                         </div>
@@ -281,8 +287,8 @@
                         <div class="footer-section left">
                             <h2 class="normal">关于</h2>
                             <ul>
-                                <li><a href="#">了解好味道</a></li>
-                                <li><a href="#">好味道历程</a></li>
+                                <li><a href="#">了解追梦</a></li>
+                                <li><a href="#">追梦历程</a></li>
                                 <li><a href="#">友情链接</a></li>
                                 <li><a href="#">联系我们</a></li>
                             </ul>
@@ -320,7 +326,7 @@
                 <div class="copyright white bg-green-light">
                     <div class="auto clear">
                         <div class="left">
-                            <p>COPYRIGHT © 2014 武汉好味道科技有限公司 ALL RIGHTS RESERVED.<br/>中国信息产业部备案 鄂ICP备13002000号-1 </p>
+                            <p>COPYRIGHT © 2011~2014 PPT STORE ALL RIGHTS RESERVED.<br/>中国信息产业部备案　京ICP备11039233号-1</p>
                         </div>
                         <div class="right clear platform">
                             <div class="left relative">
