--- a/citi/static/css/module.css
+++ b/citi/static/css/module.css
@@ -1,4 +1,4 @@
-/* common */
+/* fcommon */
 .bg-pink {
     background-color: #ff7373;
 }
@@ -134,8 +134,9 @@
 }
 .text-overflow {
     overflow: hidden;
-    text-overflow: ellipsis;
+
     white-space: nowrap;
+    text-overflow: ellipsis;
 }
 .auto {
     margin: 0 auto;
@@ -145,24 +146,29 @@
 }
 
 .project-tip {
-    padding: 0 10px;
     line-height: 20px;
+
+    padding: 0 10px;
+
     border-radius: 5px;
 }
 .triangle {
     position: absolute;
+
     display: block;
+
     width: 0;
     height: 0;
+
     border-style: solid;
 }
 .triangle-left {
-    border-color: transparent #7abe9f transparent transparent;
     border-width: 6px 10px;
+    border-color: transparent #7abe9f transparent transparent;
 }
 .triangle-down {
-    border-color: #ff7070 transparent transparent  transparent;
     border-width: 10px 6px;
+    border-color: #ff7070 transparent transparent  transparent;
 }
 .toolbar {
     position: fixed;
@@ -173,26 +179,32 @@
     width: 70px;
     height: 70px;
     margin-bottom: 10px;
+
     cursor: pointer;
-    background-color: #dfdfd0;
+
     border-radius: 35px;
+    background-color: #dfdfd0;
 }
 .toolbar-icon-wrap > div {
     position: absolute;
     top: 50%;
     left: 50%;
+
     width: 30px;
     height: 40px;
     margin-top: -20px;
     margin-left: -15px;
+
     color: white;
 }
 .toolbar-icon-wrap span {
     display: inline-block;
+
     width: 70px;
     height: 40px;
-    text-align: center;
+
     cursor: pointer;
+    text-align: center;
 }
 .round-icon {
     text-align: center;
@@ -201,16 +213,20 @@
     padding: 3px;
 }
 .round-icon-wrap .round {
+    line-height: 64px;
+
     display: block;
+
     width: 64px;
     height: 64px;
-    line-height: 64px;
-    background-color: #7abe9f;
+
     border-radius: 50%;
+    background-color: #7abe9f;
     box-shadow: 0 0 3px #999;
 }
 .dropdown {
     position: relative;
+
     overflow: hidden;
 }
 .dropdown-default {
@@ -219,17 +235,21 @@
 .dropdown-default .triangle-down {
     top: 55%;
     right: 0;
+
     margin-top: -5px;
     margin-right: 10px;
+
     border-color: #747484 transparent transparent transparent;
 }
 .dropdown-list {
-    padding: 3px 15px;
     font-size: 20px;
     line-height: 1.2;
+
+    padding: 3px 15px;
+
     color: black;
-    background-color: white;
     border-radius: 5px;
+    background-color: white;
 }
 .dropdown-list-wrap {
     margin-right: 60px;
@@ -237,31 +257,34 @@
 
 .modal {
     position: fixed;
+    z-index: 100;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 100;
     visibility: hidden;
 }
 .modal-backdrop {
     position: fixed;
+    z-index: 90;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 90;
     display: none;
-    background-color: black;
     opacity: .4;
+    background-color: black;
 }
 .modal-dialog {
     position: relative;
+
     width: 411px;
     margin: -400px auto 0;
+
+    transition: margin-top .4s;
+
     background-color: white;
     box-shadow: 0 5px 15px rgba(0,0,0,.5);
-    transition: margin-top .4s;
 }
 .modal-header {
     overflow: hidden;
@@ -271,21 +294,28 @@
     line-height: 60px;
 }
 .close {
-    top: 13px;
-    right: 13px;
-    text-align: center;
-    width: 28px;
-    height: 28px;
     font-family: simsun;
     font-size: 28px;
     font-weight: 100;
     line-height: 28px;
+
+    top: 13px;
+    right: 13px;
+
+    width: 28px;
+    height: 28px;
+
+    cursor: pointer;
+    text-align: center;
+
     color: white;
     text-shadow: 0 1px 0 #fff;
-    cursor: pointer;
 }
-.modal .close, .header .close, .panel .close {
+.modal .close ,
+.header .close ,
+.panel .close {
     top: 50%;
+
     margin-top: -14px;
 }
 .modal-body {
@@ -293,33 +323,63 @@
 }
 
 .btn {
-    display: inline-block;
-    padding: 7px 15px;
     font-size: 14px;
     font-weight: 800;
     line-height: 1.5;
-    text-align: center;
-    vertical-align: middle;
+
+    display: inline-block;
+
+    padding: 7px 15px;
+
     cursor: pointer;
     -webkit-user-select: none;
             user-select: none;
+    text-align: center;
+    vertical-align: middle;
+
     border: 1px solid transparent;
     border-radius: 4px;
 }
 .input {
-    display: inline-block;
-    padding: 10px 0 10px 20px;
     font-size: 14px;
     line-height: 20px;
-    background-color: #f0f0f0;
+
+    display: inline-block;
+
+    padding: 10px 0 10px 20px;
+
     border: none;
+    background-color: #f0f0f0;
 }
 .select {
+    font-size: 14px;
+
     height: 40px;
     padding-left: 16px;
-    font-size: 14px;
-    background-color: #f4f4f4;
+
     border-radius: 8px;
+    background-color: #f4f4f4;
+}
+.table {
+    width: 100%;
+
+    text-align: center;
+}
+.table th ,
+.table td {
+    line-height: 40px;
+}
+.table th {
+    width: 25%;
+
+    color: #999;
+    background-color: #eff6f3;
+}
+.table tr {
+    background-color: #f9f9f9;
+}
+.table tr:nth-child(even) {
+    background-color: #fcfcfc;
 }
 
 /* page */
@@ -327,9 +387,11 @@
     margin-top: 20px;
 }
 .page-wrap .round {
+    line-height: 40px;
+
     width: 40px;
     height: 40px;
-    line-height: 40px;
+
     background-color: #ececea;
     box-shadow: none;
 }
@@ -340,6 +402,7 @@
 .page .the-last-page .round {
     width: auto;
     padding: 0 15px;
+
     border-radius: 20px;
 }
 
@@ -352,31 +415,38 @@
 }
 
 /* input */
-input[type=checkbox], input[type=radio] {
+input[type=checkbox] ,
+input[type=radio] {
     position: relative;
     width: 18px;
     height: 18px;
-    -webkit-appearance: none;
     margin: 0;
-    vertical-align: -3px;
+    margin-right: 5px;
     cursor: pointer;
-    background: #f4f4f4;
+    vertical-align: -3px;
     border: none;
     border-radius: 4px;
     outline-width: 0;
+    background: #f4f4f4;
 
+    -webkit-appearance: none;
             appearance: none;
 }
 input[type=checkbox]:hover {
     border-color: #c6c6c6;
     box-shadow: inset 0 0 2px rgba(0, 0, 0, .4);
 }
-input[type=radio]:checked::after, input[type=checkbox]:checked::after {
+input[type=radio]:checked::after ,
+input[type=checkbox]:checked::after {
     position: absolute;
     top: 50%;
-    right: 0;
+    left: -2px;
     display: block;
-    margin-top: -10px;
+    line-height: 1.4;
+    width: 18px;
+    height: 18px;
+    margin-top: -9px;
+
     content: url(../img/checkmark.png);
 }
 
@@ -411,27 +481,35 @@ input[type=radio]:checked::after, input[type=checkbox]:checked::after {
     width: 100%;
 }
 .project-thumb .project-info {
-    bottom: 0;
-    width: 100%;
     line-height: 35px;
+
+    bottom: 0;
+
+    width: 100%;
+
     text-indent: 8px;
+
     background-color: rgba(0, 0, 0, .1);
 }
 .project-percentage {
     margin-bottom: 18px;
-    background-color: #ddd;
+
     border-radius: 3px;
+    background-color: #ddd;
 }
 .project-percentage > div {
     height: 6px;
+
     border-radius: 3px;
 }
 
 .position-icon {
     display: inline-block;
+
     width: 14px;
     height: 14px;
     margin-right: 5px;
+
     vertical-align: -3px;
 }
 
@@ -440,10 +518,10 @@ input[type=radio]:checked::after, input[type=checkbox]:checked::after {
     border-bottom: 4px solid #dfdfd0;
 }
 .section-title-wrap > h2 {
-    top: 4px;
-    display: inline-block;
     font-size: 28px;
     line-height: 50px;
+    top: 4px;
+    display: inline-block;
     border-bottom: 4px solid #7abe9f;
 }
 .section-title-wrap > a {
@@ -459,7 +537,8 @@ input[type=radio]:checked::after, input[type=checkbox]:checked::after {
 .sign-panel-wrap {
     padding-bottom: 60px;
 }
-.sign-panel-title a, .sign-panel-title > h2 {
+.sign-panel-title a ,
+.sign-panel-title > h2 {
     line-height: 80px;
 }
 .sign-panel-title > h2 {
@@ -477,8 +556,10 @@ input[type=radio]:checked::after, input[type=checkbox]:checked::after {
     margin-top: 10px;
 }
 .sign-panel-content-wrap {
-    padding: 0 50px;
     overflow: auto;
+
+    padding: 0 50px;
+
     background-color: #f0f0f0;
 }
 .sign-panel-content-wrap.js-scroll {
@@ -494,21 +575,25 @@ input[type=radio]:checked::after, input[type=checkbox]:checked::after {
     background-color: #d0ddd7;
 }
 .basic-info-list > label {
-    width: 100px;
     font-size: 18px;
     line-height: 40px;
+
+    width: 100px;
+
     text-align: right;
 }
 .basic-info-list > input {
     width: 260px;
+
     border-radius: 4px;
 }
 .js-sign-header .active a {
     color: #7abe9f;
 }
 .main label.error {
-    margin-left: 20px;
     font-size: 14px;
+    margin-left: 20px;
+    color: red;
 }
 .js-sign-header .done {
     background-color: #7abe9f;
@@ -528,8 +613,9 @@ input[type=radio]:checked::after, input[type=checkbox]:checked::after {
 }
 #skip {
     display: none;
-    vertical-align: bottom;
+
     cursor: pointer;
+    vertical-align: bottom;
 }
 #submit {
     display: none;
@@ -542,5 +628,6 @@ input[type=radio]:checked::after, input[type=checkbox]:checked::after {
 .success em {
     font-size: 30px;
     font-weight: 900;
+
     margin-right: 12px;
 }
