--- a/citi/static/css/search.css
+++ b/citi/static/css/search.css
@@ -1,3 +1,7 @@
+#change-location .close {
+    color: black;
+    top: 0;
+}
 .search-box > li {
     margin-bottom: 10px;
 }
@@ -31,7 +35,6 @@
 }
 .change-location {
     width: 500px;
-    height: 260px;
     right: 0;
     top: -40px;
     border-radius: 10px;
