--- a/citi/static/css/module.css
+++ b/citi/static/css/module.css
@@ -134,7 +134,6 @@
 }
 .text-overflow {
     overflow: hidden;
-
     white-space: nowrap;
     text-overflow: ellipsis;
 }
@@ -147,19 +146,14 @@
 
 .project-tip {
     line-height: 20px;
-
     padding: 0 10px;
-
     border-radius: 5px;
 }
 .triangle {
     position: absolute;
-
     display: block;
-
     width: 0;
     height: 0;
-
     border-style: solid;
 }
 .triangle-left {
@@ -179,9 +173,7 @@
     width: 70px;
     height: 70px;
     margin-bottom: 10px;
-
     cursor: pointer;
-
     border-radius: 35px;
     background-color: #dfdfd0;
 }
@@ -189,20 +181,16 @@
     position: absolute;
     top: 50%;
     left: 50%;
-
     width: 30px;
     height: 40px;
     margin-top: -20px;
     margin-left: -15px;
-
     color: white;
 }
 .toolbar-icon-wrap span {
     display: inline-block;
-
     width: 70px;
     height: 40px;
-
     cursor: pointer;
     text-align: center;
 }
@@ -214,19 +202,21 @@
 }
 .round-icon-wrap .round {
     line-height: 64px;
-
     display: block;
-
     width: 64px;
     height: 64px;
-
     border-radius: 50%;
     background-color: #7abe9f;
     box-shadow: 0 0 3px #999;
 }
+.round img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    vertical-align: top;
+}
 .dropdown {
     position: relative;
-
     overflow: hidden;
 }
 .dropdown-default {
@@ -235,18 +225,14 @@
 .dropdown-default .triangle-down {
     top: 55%;
     right: 0;
-
     margin-top: -5px;
     margin-right: 10px;
-
     border-color: #747484 transparent transparent transparent;
 }
 .dropdown-list {
     font-size: 20px;
     line-height: 1.2;
-
     padding: 3px 15px;
-
     color: black;
     border-radius: 5px;
     background-color: white;
@@ -277,12 +263,9 @@
 }
 .modal-dialog {
     position: relative;
-
     width: 411px;
     margin: -400px auto 0;
-
     transition: margin-top .4s;
-
     background-color: white;
     box-shadow: 0 5px 15px rgba(0,0,0,.5);
 }
@@ -298,24 +281,19 @@
     font-size: 28px;
     font-weight: 100;
     line-height: 28px;
-
     top: 13px;
     right: 13px;
-
     width: 28px;
     height: 28px;
-
     cursor: pointer;
     text-align: center;
-
     color: white;
     text-shadow: 0 1px 0 #fff;
 }
-.modal .close ,
-.header .close ,
+.modal .close,
+.header .close,
 .panel .close {
     top: 50%;
-
     margin-top: -14px;
 }
 .modal-body {
@@ -326,52 +304,41 @@
     font-size: 14px;
     font-weight: 800;
     line-height: 1.5;
-
     display: inline-block;
-
     padding: 7px 15px;
-
     cursor: pointer;
     -webkit-user-select: none;
             user-select: none;
     text-align: center;
     vertical-align: middle;
-
     border: 1px solid transparent;
     border-radius: 4px;
 }
 .input {
     font-size: 14px;
     line-height: 20px;
-
     display: inline-block;
-
     padding: 10px 0 10px 20px;
-
     border: none;
     background-color: #f0f0f0;
 }
 .select {
     font-size: 14px;
-
     height: 40px;
     padding-left: 16px;
-
     border-radius: 8px;
     background-color: #f4f4f4;
 }
 .table {
     width: 100%;
-
     text-align: center;
 }
-.table th ,
+.table th,
 .table td {
     line-height: 40px;
 }
 .table th {
     width: 25%;
-
     color: #999;
     background-color: #eff6f3;
 }
@@ -388,10 +355,8 @@
 }
 .page-wrap .round {
     line-height: 40px;
-
     width: 40px;
     height: 40px;
-
     background-color: #ececea;
     box-shadow: none;
 }
@@ -402,7 +367,6 @@
 .page .the-last-page .round {
     width: auto;
     padding: 0 15px;
-
     border-radius: 20px;
 }
 
@@ -415,7 +379,7 @@
 }
 
 /* input */
-input[type=checkbox] ,
+input[type=checkbox],
 input[type=radio] {
     position: relative;
     width: 18px;
@@ -428,7 +392,6 @@ input[type=radio] {
     border-radius: 4px;
     outline-width: 0;
     background: #f4f4f4;
-
     -webkit-appearance: none;
             appearance: none;
 }
@@ -436,17 +399,16 @@ input[type=checkbox]:hover {
     border-color: #c6c6c6;
     box-shadow: inset 0 0 2px rgba(0, 0, 0, .4);
 }
-input[type=radio]:checked::after ,
+input[type=radio]:checked::after,
 input[type=checkbox]:checked::after {
+    line-height: 1.4;
     position: absolute;
     top: 50%;
     left: -2px;
     display: block;
-    line-height: 1.4;
     width: 18px;
     height: 18px;
     margin-top: -9px;
-
     content: url(../img/checkmark.png);
 }
 
@@ -482,34 +444,26 @@ input[type=checkbox]:checked::after {
 }
 .project-thumb .project-info {
     line-height: 35px;
-
     bottom: 0;
-
     width: 100%;
-
     text-indent: 8px;
-
     background-color: rgba(0, 0, 0, .1);
 }
 .project-percentage {
     margin-bottom: 18px;
-
     border-radius: 3px;
     background-color: #ddd;
 }
 .project-percentage > div {
     height: 6px;
-
     border-radius: 3px;
 }
 
 .position-icon {
     display: inline-block;
-
     width: 14px;
     height: 14px;
     margin-right: 5px;
-
     vertical-align: -3px;
 }
 
@@ -537,7 +491,7 @@ input[type=checkbox]:checked::after {
 .sign-panel-wrap {
     padding-bottom: 60px;
 }
-.sign-panel-title a ,
+.sign-panel-title a,
 .sign-panel-title > h2 {
     line-height: 80px;
 }
@@ -557,9 +511,7 @@ input[type=checkbox]:checked::after {
 }
 .sign-panel-content-wrap {
     overflow: auto;
-
     padding: 0 50px;
-
     background-color: #f0f0f0;
 }
 .sign-panel-content-wrap.js-scroll {
@@ -577,14 +529,11 @@ input[type=checkbox]:checked::after {
 .basic-info-list > label {
     font-size: 18px;
     line-height: 40px;
-
     width: 100px;
-
     text-align: right;
 }
 .basic-info-list > input {
     width: 260px;
-
     border-radius: 4px;
 }
 .js-sign-header .active a {
@@ -613,7 +562,6 @@ input[type=checkbox]:checked::after {
 }
 #skip {
     display: none;
-
     cursor: pointer;
     vertical-align: bottom;
 }
@@ -628,6 +576,5 @@ input[type=checkbox]:checked::after {
 .success em {
     font-size: 30px;
     font-weight: 900;
-
     margin-right: 12px;
 }
